--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,6 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "Job Experiences"
-  url = "/experience/"
-  weight = 40
 
 [[main]]
   name = "Tutorials"
@@ -35,7 +31,7 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+[[main]]
+  name = "CV"
+  url = "files/cv.pdf"
+  weight = 70
