--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,7 +10,7 @@
 
 [[main]]
   name = "Skills"
-  url = "/skills/"
+  url = "#skills"
   weight = 20
 
 [[main]]
@@ -18,11 +18,6 @@
   url = "#projects"
   weight = 30
 
-
-[[main]]
-  name = "Tutorials"
-  url = "/tutorial/"
-  weight = 50
 
 [[main]]
   name = "Contact"
