--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,7 +3,7 @@
 
 # Color theme.
 #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`.
-color_theme = "ocean"
+color_theme = "default"
 # Enable users to switch between day and night mode?
 day_night = true
 
@@ -64,10 +64,8 @@ email = "test@example.org"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  #{icon = "linkedin", icon_pack = "fab", name = "LinkedIn", link = "skype:echo123?call"},
-  #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
-  #{icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
+  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/ramitsurana"},
+  {icon = "linkedin", icon_pack = "fab", name = "LinkedIn", link = "https://linkedin.com/in/ramitsurana"},
   ]
 
 # Display a map.
