--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ baseurl = "https://ramitsurana.github.io/"
 copyright = "Copyright &copy; {year} by Ramit Surana"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-71344758-1"
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
