--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -1,108 +1,67 @@
 {
   "data": [
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
-      "name": "masterPortfolio",
-      "createdAt": "2020-03-06T16:26:54Z",
-      "url": "https://github.com/ashutosh1919/masterPortfolio",
-      "description": "The complete portfolio website hosted using github pages (gh-pages). Visit the website here : ",
+      "id": "MDEwOlJlcG9zaXRvcnk0NDMxNTE2Nw==",
+      "name": "awesome-kubernetes",
+      "createdAt": "2015-10-15T12:14:48Z",
+      "url": "https://github.com/ramitsurana/awesome-kubernetes",
+      "description": "A curated list for awesome kubernetes sources :ship::tada:",
+      "isFork": false,
+      "languages": []
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnk5NTAxNjMyNw==",
+      "name": "terraform-ansible-setup",
+      "createdAt": "2017-06-21T15:02:20Z",
+      "url": "https://github.com/ramitsurana/terraform-ansible-setup",
+      "description": "Setting up your complete infrastructure on cloud premises using Infrastructure as a Code",
+      "isFork": false,
+      "languages": []
+    },
+    {
+      "id": "MDEwOlJlcG9zaXRvcnkxODExODE3OTI=",
+      "name": "kubernetes-workshop",
+      "createdAt": "2019-04-13T14:19:28Z",
+      "url": "https://github.com/ramitsurana/kubernetes-workshop",
+      "description": "Kubernetes Worksphop Material",
       "isFork": false,
       "languages": [
+        {
+          "name": "Python",
+          "iconifyClass": "logos-python"
+        },
         {
           "name": "HTML",
           "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
         }
       ]
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNjkwNzUwMjM=",
-      "name": "truvisory",
-      "createdAt": "2020-06-03T11:53:55Z",
-      "url": "https://github.com/ashutosh1919/truvisory",
-      "description": "This project is meant to provide resources to users who want to access good LinkedIn posts which contains resources to learn any Technology, Design, Self-Branding, Motivation etc. You can visit project by:",
+      "id": "MDEwOlJlcG9zaXRvcnk2Mjk5NzEwNw==",
+      "name": "turbo",
+      "createdAt": "2016-07-10T12:14:52Z",
+      "url": "https://github.com/ramitsurana/turbo",
+      "description": "Simple and Powerfull Utility for Docker",
       "isFork": false,
-      "languages": [
-        {
-          "name": "HTML",
-          "iconifyClass": "logos-html-5"
-        },
-        {
-          "name": "CSS",
-          "iconifyClass": "logos-css-3"
-        },
-        {
-          "name": "JavaScript",
-          "iconifyClass": "logos-javascript"
-        }
-      ]
+      "languages": []
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkyNzM1MTI1NTE=",
-      "name": "ml-data-bot",
-      "createdAt": "2020-06-19T14:24:55Z",
-      "url": "https://github.com/ashutosh1919/ml-data-bot",
-      "description": "Chatbot which helps you to get important statistics from the data to get insights to build Machine learning, Deep learning and Statistical models",
+      "id": "MDEwOlJlcG9zaXRvcnk5MzQ4NTA1Ng==",
+      "name": "ansible-ec2-docker-deployment",
+      "createdAt": "2017-06-06T06:42:16Z",
+      "url": "https://github.com/ramitsurana/ansible-ec2-docker-deployment",
+      "description": "Deploying wordpress blog using docker & ansible on AWS",
       "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
+      "languages": []
     },
     {
-      "id": "MDEwOlJlcG9zaXRvcnkxNTU5NTE3NTk=",
-      "name": "Stock-Prediction-using-LSTM",
-      "createdAt": "2018-11-03T05:00:56Z",
-      "url": "https://github.com/ashutosh1919/Stock-Prediction-using-LSTM",
-      "description": "This Project is predicting stocks for 32 companies with error less than 1% using LSTM Networks.",
+      "id": "MDEwOlJlcG9zaXRvcnkxMTU0Mjg1MzY=",
+      "name": "hashicorp-tools-setup",
+      "createdAt": "2017-12-26T14:21:41Z",
+      "url": "https://github.com/ramitsurana/hashicorp-tools-setup",
+      "description": "A Sample art of work on hashicorp tools",
       "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        },
-        {
-          "name": "Jupyter Notebook",
-          "iconifyClass": "logos-jupyter"
-        }
-      ]
-    },
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkyMDIxNDc4ODA=",
-      "name": "Pick-Parser",
-      "createdAt": "2019-08-13T13:13:00Z",
-      "url": "https://github.com/dsc-iiitdmk/Pick-Parser",
-      "description": "This Project is to create a tool which can parse the Resumes and transform them into our own templates",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "Python",
-          "iconifyClass": "logos-python"
-        }
-      ]
-    },
-    {
-      "id": "MDEwOlJlcG9zaXRvcnkxODIxMjk3NTQ=",
-      "name": "Survival_3D_Game",
-      "createdAt": "2019-04-18T17:25:51Z",
-      "url": "https://github.com/ashutosh1919/Survival_3D_Game",
-      "description": "Survival Game using Unity3D",
-      "isFork": false,
-      "languages": [
-        {
-          "name": "C#",
-          "iconifyClass": "logos-c-sharp"
-        }
-      ]
+      "languages": []
     }
   ]
 }
